# examples

./: .gitignore  Cargo.toml  LICENSE-APACHE  README.md  justfile
.github/: CODEOWNERS  PULL_REQUEST_TEMPLATE.md
.github/workflows/: release.yml  test.yml
examples/bitcoin-local-signing-with-propagation-legacy-advanced/: Cargo.toml  README.md
examples/bitcoin-local-signing-with-testnet-propagation-legacy/: Cargo.toml  README.md
examples/bitcoin-local-signing-with-testnet-propagation-legacy/src/: lib.rs
examples/bitcoin-local-signing-with-testnet-propagation-legacy/tests/: test_contract.rs
examples/bitcoin-multiple-signing-with-propagation/: Cargo.toml
examples/bitcoin-multiple-signing-with-propagation-segwit/: Cargo.toml
examples/bitcoin-multiple-signing-with-propagation-segwit/tests/: test_contract.rs
examples/bitcoin-multiple-signing-with-propagation/src/: lib.rs
examples/bitcoin-remote-signing-with-propagation-legacy-advanced/: Cargo.toml  README.md
examples/bitcoin-remote-signing-with-testnet-propagation-legacy/: Cargo.toml  README.md
examples/bitcoin-remote-signing-with-testnet-propagation-legacy/tests/: test_contract.rs
examples/bitcoin-signing-segwit/: Cargo.toml  README.md
examples/bitcoin-signing-segwit-multiple-utxos/: Cargo.toml  README.md
examples/bitcoin-signing-segwit-multiple-utxos/tests/: test_contract.rs
examples/bitcoin-signing-segwit/tests/: test_contract.rs
examples/bitcoin-signing-with-propagation/: Cargo.toml  README.md
examples/bitcoin-signing-with-propagation-legacy/: Cargo.toml  README.md
examples/bitcoin-signing-with-propagation-legacy-advanced/: Cargo.toml  README.md
examples/bitcoin-signing-with-propagation-legacy-advanced-2/: Cargo.toml
examples/bitcoin-signing-with-propagation-legacy-advanced-2/src/: external.rs
examples/bitcoin-signing-with-propagation-legacy-advanced-2/tests/: test_contract.rs
examples/bitcoin-signing-with-propagation-legacy-advanced-local-siging/: Cargo.toml  README.md
examples/bitcoin-signing-with-propagation-legacy-advanced-local-siging/tests/: test_contract.rs
examples/bitcoin-signing-with-propagation-legacy-advanced-remote-signing/: Cargo.toml  README.md
examples/bitcoin-signing-with-propagation-legacy-advanced-remote-signing/tests/: test_contract.rs
examples/bitcoin-signing-with-propagation-legacy-advanced-rust-client/: Cargo.toml  README.md
examples/bitcoin-signing-with-propagation-legacy-advanced-rust-client/src/: lib.rs
examples/bitcoin-signing-with-propagation-legacy-advanced-rust-client/tests/: test_contract.rs
examples/bitcoin-signing-with-propagation-legacy-advanced/src/: external.rs  lib.rs  signature.rs  types.rs
examples/bitcoin-signing-with-propagation-legacy-advanced/tests/: test_contract.rs
examples/bitcoin-signing-with-propagation-legacy/src/: lib.rs
examples/bitcoin-signing-with-propagation-legacy/tests/: test_contract.rs
examples/bitcoin-signing-with-propagation-segwit/: Cargo.toml  README.md
examples/bitcoin-signing-with-propagation-segwit/src/: lib.rs
examples/bitcoin-signing-with-propagation-segwit/tests/: test_contract.rs
examples/bitcoin-signing-with-propagation/src/: lib.rs
examples/bitcoin-signing-with-propagation/tests/: address_utils.rs  test_contract.rs
examples/bitcoin-simple-encoding/: Cargo.toml
examples/bitcoin-simple-encoding-passing-args/: Cargo.toml  README.md
examples/bitcoin-simple-encoding-passing-args/src/: lib.rs
examples/bitcoin-simple-encoding-passing-args/tests/: test_contract.rs
examples/bitcoin-simple-encoding/src/: lib.rs
examples/evm-0-simple-encoding/: README.md  cargo.toml
examples/evm-0-simple-encoding/src/: lib.rs
examples/evm-0-simple-encoding/tests/: test_contract.rs
examples/evm-1-multiple-encoding/: Cargo.toml
examples/evm-2-simple-signing/: Cargo.toml
examples/evm-3-multiple-signing/: Cargo.toml
examples/evm-4-advance-signing/: Cargo.toml
examples/evm-local-signing-with-propagation/: Cargo.toml  README.md
examples/evm-local-signing-with-propagation/tests/: test_contract.rs
examples/evm-remote-signing-with-propagation/: Cargo.toml  README.md
examples/evm-remote-signing-with-propagation/src/: lib.rs
examples/evm-remote-signing-with-propagation/tests/: test_contract.rs
examples/evm-signing-with-propagation/: Cargo.toml  README.md
examples/evm-signing-with-propagation-local-signing/: Cargo.toml  README.md
examples/evm-signing-with-propagation-local-signing/src/: lib.rs
examples/evm-signing-with-propagation-local-signing/tests/: test_contract.rs
examples/evm-signing-with-propagation/src/: external.rs  lib.rs
examples/evm-signing-with-propagation/tests/: test_contract.rs
examples/evm-simple-encoding/: Cargo.toml  README.md
examples/evm-simple-encoding-passing-args/: Cargo.toml  README.md
examples/evm-simple-encoding-passing-args/src/: lib.rs
examples/evm-simple-encoding-passing-args/tests/: test_contract.rs
examples/evm-simple-encoding-with-signature/: Cargo.toml  README.md
examples/evm-simple-encoding-with-signature/src/: lib.rs
examples/evm-simple-encoding-with-signature/tests/: test_contract.rs
examples/evm-simple-encoding/src/: lib.rs
examples/evm-simple-encoding/tests/: test_contract.rs
examples/evm-simple-signing/: Cargo.toml  README.md
examples/evm-simple-signing-and-propagating/: Cargo.toml  README.md
examples/evm-simple-signing/src/: lib.rs
examples/near-0-simple-encoding/: cargo.toml
examples/near-0-simple-encoding/src/: lib.rs
examples/near-0-simple-encoding/tests/: test_contract.rs
examples/near-1-multiple-encoding/: Cargo.toml
examples/near-2-simple-signing/: Cargo.toml
examples/near-3-multiple-signing/: Cargo.toml
examples/near-4-advance-signing/: Cargo.toml
examples/near-simple-encoding/: Cargo.toml  README.md
examples/near-simple-encoding-passing-args/: Cargo.toml  README.md
examples/near-simple-encoding-passing-args/src/: lib.rs
examples/near-simple-encoding-passing-args/tests/: test_contract.rs
examples/near-simple-encoding-passing-json/: Cargo.toml
examples/near-simple-encoding/src/: lib.rs
(+6 files in other folders)
