[workspace]
members = ["examples/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.76"
authors = ["Proximity Labs"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Omni-rs/examples"
repository = "https://github.com/Omni-rs/examples"
publish = false
exclude = ["examples/"]

[dependencies]
near-sdk = "5.1.0"
omni = { path = "https://github.com/edsonalcala/omni-transaction-rs.git" }

[dev-dependencies]
near-sdk = { version = "5.1.0", features = ["unit-testing"] }
near-workspaces = { version = "0.10.0", features = ["unstable"] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"

[profile.release]
codegen-units = 1
opt-level = "z"        # Tell `rustc` to optimize for small code size.
lto = true
debug = false
panic = "abort"
overflow-checks = true # Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801
