[workspace]
members = ["examples/*"]
resolver = "2"

[workspace.package]
version = "0.0.1"
edition = "2021"
rust-version = "1.76"
authors = ["Proximity Labs"]
license = "MIT OR Apache-2.0"
homepage = "https://github.com/Omni-rs/examples"
repository = "https://github.com/Omni-rs/examples"
publish = false

[workspace.dependencies]
near-sdk = "5.5.0"
omni-transaction = { git = "https://github.com/EdsonAlcala/omni-transaction-rs", branch = "master" }
near-workspaces = { version = "0.14.0", features = [
    "experimental",
    "unstable",
] }
tokio = { version = "1.12.0", features = ["full"] }
serde_json = "1"
hex = "0.4.3"
omni-testing-utilities = { git = "https://github.com/Omni-rs/omni-testing-utilities", branch = "main" }

[profile.release]
codegen-units = 1
opt-level = "z"        # Tell `rustc` to optimize for small code size.
lto = true
debug = false
panic = "abort"
overflow-checks = true # Opt into extra safety checks on arithmetic operations https://stackoverflow.com/a/64136471/249801

[workspace.lints]
