[package]
name = "bitcoin-signing-with-propagation-legacy-advanced-remote-signing"
publish.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
near-sdk.workspace = true
omni-transaction.workspace = true
hex.workspace = true
schemars = { version = "0.8" }

[dev-dependencies]
bitcoin = { version = "0.32.0", default-features = false, features = [
    "std",
    "serde",
    "rand-std",
    "rand",
    "secp-lowmemory",
    "secp-recovery",
] }
near-primitives = "0.25.0"
near-jsonrpc-primitives = "0.25.0"
near-jsonrpc-client = { git = "https://github.com/omni-rs/near-jsonrpc-client-rs", tag = "v0.12.1" }
near-crypto = "0.25.0"
sha3 = "0.10.8"
k256 = { version = "0.13.1", features = [
    "sha256",
    "ecdsa",
    "serde",
    "arithmetic",
    "expose-field",
] }
bs58 = "0.5.1"
ripemd = "0.1.3"
omni-testing-utilities.workspace = true
omni-box.workspace = true
tokio.workspace = true
serde_json.workspace = true
bip39 = "2.1.0"
reqwest = "0.12.12"
