[package]
name = "evm-example-simple-signing"
publish.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lints]
workspace = true

[dependencies]
near-sdk.workspace = true
omni-transaction.workspace = true
