[package]
name = "evm-simple-encoding-passing-args"
publish.workspace = true
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
homepage.workspace = true
repository.workspace = true

[lib]
crate-type = ["cdylib"]

[lints]
workspace = true

[dependencies]
near-sdk.workspace = true
omni-transaction.workspace = true

[dev-dependencies]
near-sdk = { version = "5.1.0", features = ["unit-testing"] }
near-workspaces.workspace = true
tokio.workspace = true
serde_json.workspace = true
